--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@react-three/fiber": "^8.17.10",
     "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^4.0.0",
+    "clsx": "^2.1.1",
+    "firebase": "^11.0.2",
     "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.1",
     "react-lottie": "^1.2.10",
+    "react-router-dom": "^7.0.2",
+    "tailwind-merge": "^2.5.5",
     "three": "^0.171.0"
   },
   "devDependencies": {
