--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@react-three/fiber": "^8.17.10",
     "@splinetool/r3f-spline": "^1.0.2",
     "@splinetool/react-spline": "^4.0.0",
+    "@tabler/icons-react": "^3.24.0",
     "clsx": "^2.1.1",
     "firebase": "^11.0.2",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^11.14.4",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
